@@ -247,6 +247,12 @@
 			<li><span class="label label-info">Modified</span> The internationalizable label 
 				<code>Messages_createRepresentationInputDialog_Title</code> has been replaced by &#171;New {0}&#187; (previous value was &#171;New Representation&#187;). 
 			</li>
+			<li><span class="label label-info">Moved</span> The classes 
+				<code>org.eclipse.sirius.ui.business.api.action.RefreshActionListenerRegistry</code> and 
+				<code>org.eclipse.sirius.ui.business.api.action.IRefreshActionListener</code> have been moved out of the Sirius UI bundle to the Sirius bundle, they are now known as 
+				<code>org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry</code> and 
+				<code>org.eclipse.sirius.business.api.action.IRefreshActionListener</code>.
+			</li>
 			<li><span class="label label-danger">Removed</span> The class 
 				<code>org.eclipse.sirius.ui.business.api.editor.SpecificSessionManager</code> has been removed. 
 			</li>
