@@ -67,6 +67,7 @@ h4. Changes in @org.eclipse.sirius.ui@
 * <span class="label label-info">Modified</span> The internationalizable label @Messages_createRepresentationInputDialog_NewRepresentationNameLabel@ has been replaced by "Name:" (previous value was "Representation name:"). 
 * <span class="label label-info">Modified</span> The internationalizable label @Messages_createRepresentationInputDialog_RepresentationDescriptionLabel@ has been replaced by "Representation description: {0}" (previous value was "Representation description: "). 
 * <span class="label label-info">Modified</span> The internationalizable label @Messages_createRepresentationInputDialog_Title@ has been replaced by "New {0}" (previous value was "New Representation"). 
+* <span class="label label-info">Moved</span> The classes @org.eclipse.sirius.ui.business.api.action.RefreshActionListenerRegistry@ and @org.eclipse.sirius.ui.business.api.action.IRefreshActionListener@ have been moved out of the Sirius UI bundle to the Sirius bundle, they are now known as @org.eclipse.sirius.business.api.action.RefreshActionListenerRegistry@ and @org.eclipse.sirius.business.api.action.IRefreshActionListener@.
 * <span class="label label-danger">Removed</span> The class @org.eclipse.sirius.ui.business.api.editor.SpecificSessionManager@ has been removed. 
 * <span class="label label-danger">Removed</span> The constant @IMAGES_RESOURCE_NAME@ in @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector@ has been removed since it was not used anymore.
 
